test/tests/stages/7_compound_statements/valid/extra_credit/goto_inner_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(5)
  ;
  goto
  identifier(inner)
  ;
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  identifier(inner)
  :
  identifier(x)
  =
  const int(1)
  ;
  return
  identifier(x)
  ;
  }
  }
